--- a/app/index.css
+++ b/app/index.css
@@ -1,3 +1,121 @@
-body {
-	background-color: red;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+body{
+	width: 100%;
+	height: 100%;
+	font-family: 'Open Sans', sans-serif;
+
+}
+.search{
+	max-width: 760px;
+	margin: 0 auto;
+	text-align:center;
+}
+form.search-form{
+	text-align: center;
+}
+input[type="search"]{
+
+}
+button[type="submit"]{
+
+}
+ul.answers{
+
+}
+li.answers-item{
+
+}
+a.answers-title{
+
+}
+ul.answer-owner{
+
+}
+li.answer-owner-avatar{
+
+}
+li.answer-owner-accept-rate{
+
+}
+li.answer-owner-name a{
+
+}
+
+.stack {
+	margin: 0 auto;
+	width: 760px;
+	padding: 100px 340px;
+}
+
+.stack-row{
+  width: 80px;
+  height: 10px;
+  background-color: orange;
+  margin: 2px 0px;
+  display: block;
+}
+
+.stack-row:first-child{
+  animation-duration: 2s;
+  animation-name: rotate-one;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes rotate-one{
+  from{
+    transform: translateY(-20px) translateX(20px) rotate( 40deg )
+  }
+  to {
+    transform: translateY(0px) translateX(0px) rotate( 0deg )
+  }
+}
+
+.stack-row:nth-child(2){
+  animation-duration: 2s;
+  animation-name: rotate-two;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes rotate-two{
+  from{
+    transform: translateY(-15px) translateX(10px) rotate( 30deg )
+  }
+  to {
+    transform: translateY(0px) translateX(0px) rotate( 0deg )
+  }
+}
+
+.stack-row:nth-child(3){
+  animation-duration: 2s;
+  animation-name: rotate-three;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes rotate-three{
+  from{
+    transform: translateY(-10px) translateX(5px) rotate( 20deg )
+  }
+  to {
+    transform: translateY(0px) translateX(0px) rotate( 0deg )
+  }
+}
+
+.stack-row:nth-child(4){
+  animation-duration: 2s;
+  animation-name: rotate-four;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes rotate-four{
+  from{
+    transform: translateY(-5px) rotate( 10deg )
+  }
+  to {
+    transform: translateY(0px) translateX(0px) rotate( 0deg )
+  }
 }
